# pulse

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benches/: probe_overhead.rs
docs/: demo.cast
examples/: django-celery.toml  next-postgres-redis.toml  pulse.toml  rails-sidekiq.toml  rust-api-docker.toml
src/: agents.rs  ansi_overwrite.rs  app.rs  config.rs  deps.rs  discover.rs  envwatch.rs  errors.rs  graph.rs  ipc.rs  keymap.rs  lib.rs  main.rs  patterns.rs  ports.rs  probe.rs  service.rs  share.rs  shellcmd.rs  shutdown.rs  supervisor.rs  tap.rs  theme_file.rs
src/ui/: graph.rs  help.rs  logs.rs  mod.rs  sidebar.rs  statusbar.rs  tap.rs  theme.rs
tests/: agents.rs  cli_completions.rs  config_parsing.rs  deps.rs  discover.rs  graph_layout.rs  log_buffer.rs  polish_v03_1.rs  probe.rs  share_export.rs  stack_examples.rs  supervisor.rs  tap_config.rs  tap_ring.rs  theme_defaults.rs
