[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "one terminal window for all your local dev servers"
license = "MIT"
authors = ["farkhad <bennett@frkhd.com>"]

[lib]
name = "pulse"
path = "src/lib.rs"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
shlex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "signal"] }
nix = { version = "0.29", features = ["signal", "process"] }
crossterm = { version = "0.28", features = ["event-stream"] }
regex = "1"
ratatui = "0.29"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
