[package]
name = "pulse"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "one terminal window for all your local dev servers"
license = "MIT"
authors = ["farkhad <bennett@frkhd.com>"]
repository = "https://github.com/f4rkh4d/pulse"

[lib]
name = "pulse"
path = "src/lib.rs"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shlex = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nix = { version = "0.29", features = ["signal", "process"] }
ansi-to-tui = "7"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
notify = "7"
petgraph = "0.6"
rand = "0.8"
serde_yaml = "0.9"
serde_json = "1"
html-escape = "0.2"
directories = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
